* important changes in version 1.44 19/01/2009:
- Address #41798: Nonempty $\ when writing a Tar file produces a
  corrupt Tar file 	
- Textual fix to Makefile.PL diagnostics

* important changes in version 1.42 13/12/2008:
- Address #40426: Archive Tar to support direct Archive::Tar::File adds
  It is now possible to add Archive::Tar::File objects via $tar->add_files
- Address #40016 (Archive::Tar assumes $> won't change): CAN_CHOWN is now a
  dynamic check upon extraction. This allows scripts to drop privileges when
  desired
- Address take 2 of #39933: [PATCH] handle ../ directory name on VMS
  John M. sent in a better way to do directory name translation.
 
* important changes in version 1.40 13/10/2008:
- Add $class->has_zlib_support and $class->has_bzip2_support to
  discern which A::T can support
- Address: #39933: [PATCH] handle ../ directory name on VMS (core patch)

* important changes in version 1.39_04 08/09/2008:
- Address: #38932: pax_global_header extracted as file
  Don't extract these special files, which are added by, among
  others, git-generated tarballs. It holds a comment and is not
  meant for extraction. This follows gnu tar 1.14 and later behaviour
- Address: #19577: extract_file() drops volume part of extraction path
  Windows users can now extract files to a different volume

* important changes in verison 1.39_03 26/08/2008:
- Because all the IO::Compress modules are interlinked, they must be 
  the same version when installed, or breakage will occur like shown
  at this tester report:
    
    http://www.nntp.perl.org/group/perl.cpan.testers/2008/08/msg2083310.html
  
  Mailed the author to find a less fragile solution, but for now we require
  all the individual modules, and all at the same version.

* important changes in version 1.39_02 25/08/2008:
- Address #31806: Please add support for bzipped tar files.
  Archive::Tar now supports reading/writing tar.bz2 files.
- Since IO::Zlib is now core, it is now a default dependency.